--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                    <span>samsung</span>
                 </div> <div class="category-card" data-category="nokia">
                    <img src="uploads/nokia.jpg" alt=" " class="category-icon" />
-                   <span>Nokia</span>
+                   <span>okia</span>
                 </div> <div class="category-card" data-category="Xiomi">
                    <img src="uploads/xiomi.jpg" alt=" " class="category-icon" />
                    <span>Xiomi</span>
